# Neo--DevPilot-Agent

./: .env.cloud.example  .env.example  .gitignore  AI_RESTORATION_SUMMARY.md.backup  ARCHITECTURE.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloud  FEATURES.md  QUICKSTART.md  README.md  README.md.backup  SETUP_GUIDE.txt  demo_ai_features.py  docker-compose.yml  implementation_plan.md  pyproject.toml  railway.json  remote_agent.py  render.yaml  run.py  setup_copilot_final.py  start-server.bat  test_agent_fix.py  test_ai_restoration.py  test_all_copilot_methods.py  test_copilot_cli.py  test_cross_platform_fix.py  test_paired_fs.py  test_vscode_command.py  verify_build_fix.py
.claude/: settings.json
.github/workflows/: ci.yml  deploy-fly.yml  deploy-render.yml  deploy.yml
AgentInstaller-Download/api/: download.js
Frontend/: .gitignore  README.md  app.json  build-apk.bat  eas.json  package-lock.json  package.json
Frontend/app/: _layout.tsx
Frontend/lib/: api.ts  config.ts  theme.ts
Frontend/test-build/: metadata.json
agent-installer/: README.txt  install.bat  jarvis_agent.py  start-agent.bat
docker/: docker-compose.yml  init.sql
freellmapi/: .env.example  docker-compose.yml  export-keys.js  package-lock.json
freellmapi/client/: package.json
freellmapi/server/: tsconfig.json
src/: .env.example  requirements.txt
src/jarvis/: __init__.py  config.py  execution_context.py  main.py  (+1 more)
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_devices.py  test_ide.py  test_observability.py  test_self_heal.py  test_workflows.py
(+161 files in other folders)
